tests/parsing/smtlib/mcil/errors/282_check-system_bad_attribute_6.mcil
(check-system sys :local () _)