tests/parsing/smtlib/mcil/errors/282_check-system_bad_attribute_6.expected
File "tests/parsing/smtlib/mcil/errors/282_check-system_bad_attribute_6.mcil", line 1, character 28-29:
1 | (check-system sys :local () _)
                                ^
Error while parsing a check-system command, read the reserved word '_',
      but expected an attribute from the set (:input, :output, :assumption,
      :reachable, :query, :queries).
